Ajoute col row pour filtre

--- a/Reservia.html
+++ b/Reservia.html
@@ -48,32 +48,42 @@
 						<div id="Filtres">
 							<p>Filtres</p>
 
-							<div class="Filter">
-								<i class="fas fa-money-bill-wave"></i>
-								<div class="filter_text">
-									Economique
-								</div>	
-							</div>
+							<div class="row">
+								<div class="col-6 col-sm-3">
+									<div class="Filter">
+										<i class="fas fa-money-bill-wave"></i>
+										<div class="filter_text">
+											Economique
+										</div>	
+									</div>
+								</div>
 
-							<div class="Filter">
-								<i class="fas fa-child"></i>
-								<div class="filter_text">
-									Familial
-								</div>	
-							</div>
+								<div class="col-6 col-sm-3">
+									<div class="Filter">
+										<i class="fas fa-child"></i>
+										<div class="filter_text">
+											Familial
+										</div>	
+									</div>
+								</div>
 
-							<div class="Filter">
-								<i class="fas fa-heart"></i>
-								<div class="filter_text">
-									Romantique
-								</div>	
-							</div>
+								<div class="col-12 col-sm-3">
+									<div class="Filter">
+										<i class="fas fa-heart"></i>
+										<div class="filter_text">
+											Romantique
+										</div>	
+									</div>
+								</div>
 
-							<div class="Filter">
-								<i class="fas fa-dog"></i>
-								<div class="filter_text">
-									Animaux autorisés
-								</div>	
+								<div class="col-12 col-sm-3">
+									<div class="Filter">
+										<i class="fas fa-dog"></i>
+										<div class="filter_text">
+											Animaux autorisés
+										</div>	
+									</div>
+								</div>
 							</div>
 						</div>
 
