Changement footer en lien

--- a/index.html
+++ b/index.html
@@ -222,21 +222,21 @@
 				<div id="footer"> 						
 					<div id="a_propos">
 						<h3>A propos</h3>
-						<p>Fontionnement du site</p>
-						<p>Conditions générale de ventes</p>
-						<p>Données et confidentialité</p>
+						<a href="#">Fontionnement du site</a>
+						<a href="#">Conditions générale de ventes</a>
+                        <a href="#">Données et confidentialité</a>
 					</div>
 											
 					<div id="nos_hebergements">
 						<h3>Nos hebergements</h3>
-						<p>Charte qualité</p>
-						<p>Soumettre votre hôtel</p>
+						<a href="#">Charte qualité</a>
+                        <a href="#">Soumettre votre hôtel</a>
 					</div>
 												
 					<div id="assistance">
 						<h3>Assistance</h3>
-						<p>Centre d'aide</p>
-						<p>Nous contacter</p>
+						<a href="#">Centre d'aide</a>
+						<a href="#">Nous contacter</a>
 					</div>	
 				</div>
 			</footer>
