Retrait du style css dans le html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<div id="naviguation">
 					<nav>
 						<ul>
-							<li><a href="#section2" style="color: #0065FC;">Hébergements</a></li>
+							<li><a href="#section2">Hébergements</a></li>
 							<li><a href="#section3">Activités</a></li>
-							<li><a href="#" style="color: #0065FC;">S'inscrire</a></li>
+							<li><a href="#">S'inscrire</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -96,7 +96,7 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo1hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Auberge la Cannebière</span><br /><span class="span2">Nuit à partir de 25€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Auberge la Cannebière</span><br /><span class="span2">Nuit à partir de 25€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
@@ -110,7 +110,7 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo3hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel les mouettes</span><br /><span class="span2">Nuit à partir de 76€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Hôtel les mouettes</span><br /><span class="span2">Nuit à partir de 76€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 					</div>
@@ -119,14 +119,14 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo4hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel de la mer</span><br /><span class="span2">Nuit à partir de 46€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Hôtel de la mer</span><br /><span class="span2">Nuit à partir de 46€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo5hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Auberge le panier</span><br /><span class="span2">Nuit à partir de 23€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Auberge le panier</span><br /><span class="span2">Nuit à partir de 23€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
@@ -141,7 +141,7 @@
 				</section>
 
 				<aside id="aside_conteneur">
-					<h2>Les plus populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
+					<h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
 
 					<div class="aside">
 						<a href="#"><figure class="flex">
@@ -153,14 +153,14 @@
 					<div class="aside">
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire2.jpg" alt="#" />
-								<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 						</figure></a>
 					</div>
 
 					<div class="aside">
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire3.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 						</figure></a>
 					</div>
 				</aside>
@@ -168,7 +168,7 @@
 				<section id="section3">
 					<h2>Activités à Marseille</h2>
 
-					<div style="margin-left: -25px;" id="conteneur">
+					<div id="conteneur">
 						<div class="activite">
 							<a href="#"><figure>
 								<img src="Images/Activite/activite1.jpg" alt="#" />
@@ -184,7 +184,7 @@
 								</figure></a>
 							</div>
 
-							<div style="margin-top: 23px;" class="activite">
+							<div class="activite">
 								<a href="#"><figure>
 									<img src="Images/Activite/activite3.jpg" alt="#" />
 									<figcaption><span class="span">Iles de Frioul</span></figcaption>
@@ -207,7 +207,7 @@
 								</figure></a>
 							</div>
 
-							<div style="margin-top: 59.5px;" class="activite">
+							<div class="activite">
 								<a href="#"><figure>
 									<img src="Images/Activite/activite6.jpg" alt="#" />
 									<figcaption><span class="span">Parc Longchamp</span></figcaption>
