--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p>En plein centre ville ou ou en pleine nature</p>
                     
 					<div>
-						<form method="post" action="traitement.php" id="Form">
+						<form method="post" action="traitement.php" id="form">
 							<p>
 								<label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
 								<input type="text" name="localisation" id="localisation" />
@@ -96,21 +96,21 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo1hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Auberge la Cannebière</span><br /><span class="span2">Nuit à partir de 25€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><div class="span">Auberge la Cannebière</div><div class="span2">Nuit à partir de 25€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo2hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel du port</span><br /><span class="span2">Nuit à partir de 52€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><div class="span">Hôtel du port</div><div class="span2">Nuit à partir de 52€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo3hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel les mouettes</span><br /><span class="span2">Nuit à partir de 76€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><div class="span">Hôtel les mouettes</div><div class="span2">Nuit à partir de 76€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 					</div>
@@ -119,21 +119,21 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo4hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel de la mer</span><br /><span class="span2">Nuit à partir de 46€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><div class="span">Hôtel de la mer</div><div class="span2">Nuit à partir de 46€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo5hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Auberge le panier</span><br /><span class="span2">Nuit à partir de 23€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><div class="span">Auberge le panier</div><div class="span2">Nuit à partir de 23€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo6hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel chez Amina</span><br /><span class="span2">Nuit à partir de 96€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><div class="span">Hôtel chez Amina</div><div class="span2">Nuit à partir de 96€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 					</div>
@@ -146,21 +146,45 @@
 					<div class="aside">
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire1.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel le soleil du matin</span><br /><span class="span2">Nuit à partir de 128€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+                                <figcaption>
+                                    <div class="span">
+                                        Hôtel le soleil du matin
+                                    </div>
+                                    <div class="span2">
+                                        Nuit à partir de 128€
+                                    </div>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                </figcaption>
 						</figure></a>
 					</div>
 
 					<div class="aside">
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire2.jpg" alt="#" />
-								<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+                                    <div class="span">
+                                        Au coeur de l'eau Chambres d'hôtes
+                                    </div>
+                                    <div class="span2">
+                                        Nuit à partir de 71€
+                                    </div>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                </figcaption>
 						</figure></a>
 					</div>
 
 					<div class="aside">
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire3.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+                                    <div class="span">
+                                        Hôtel Tout bleu et Blanc
+                                    </div>
+                                    <div class="span2">
+                                        Nuit à partir de 68€
+                                    </div>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                </figcaption>
 						</figure></a>
 					</div>
 				</aside>
