--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 					</div>
 				</section>
 
+
+
 				<section id="section2">
 					<h2>Hébergements à Marseille</h2>
 
@@ -96,49 +98,104 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo1hebergement.jpg" alt="#" />
-								<figcaption><div class="span">Auberge la Cannebière</div><div class="span2">Nuit à partir de 25€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+									<div class="name_accommodation">
+										Auberge la Cannebière
+									</div>
+									<div class="price_accomodation">
+										Nuit à partir de 25€
+									</div>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								</figcaption>
 							</figure></a>
 						</div>
+
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo2hebergement.jpg" alt="#" />
-								<figcaption><div class="span">Hôtel du port</div><div class="span2">Nuit à partir de 52€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+									<div class="name_accommodation">
+										Hôtel du port
+									</div>
+									<div class="price_accomodation">
+										Nuit à partir de 52€
+									</div>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								</figcaption>
 							</figure></a>
 						</div>
+
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo3hebergement.jpg" alt="#" />
-								<figcaption><div class="span">Hôtel les mouettes</div><div class="span2">Nuit à partir de 76€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+									<div class="name_accommodation">
+										Hôtel les mouettes
+									</div>
+									<div class="price_accomodation">
+										Nuit à partir de 76€
+									</div>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								</figcaption>
 							</figure></a>
 						</div>
 					</div>
+
 
 					<div id="hebergement2">
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo4hebergement.jpg" alt="#" />
-								<figcaption><div class="span">Hôtel de la mer</div><div class="span2">Nuit à partir de 46€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+									<div class="name_accommodation">
+										Hôtel de la mer
+									</div>
+									<div class="price_accomodation">
+										Nuit à partir de 46€
+									</div>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								</figcaption>
 							</figure></a>
 						</div>
 
+						
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo5hebergement.jpg" alt="#" />
-								<figcaption><div class="span">Auberge le panier</div><div class="span2">Nuit à partir de 23€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+									<div class="name_accommodation">
+										Auberge le panier
+									</div>
+									<div class="price_accomodation">
+										Nuit à partir de 23€
+									</div>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								</figcaption>
 							</figure></a>
 						</div>
+
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo6hebergement.jpg" alt="#" />
-								<figcaption><div class="span">Hôtel chez Amina</div><div class="span2">Nuit à partir de 96€</div><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption>
+									<div class="name_accommodation">
+										Hôtel chez Amina
+									</div>
+									<div class="price_accomodation">
+										Nuit à partir de 96€
+									</div>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								</figcaption>
 							</figure></a>
 						</div>
 					</div>
 					<p>Afficher plus</p>
 				</section>
+
+
 
 				<aside id="aside_conteneur">
 					<h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
@@ -147,13 +204,13 @@
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire1.jpg" alt="#" />
                                 <figcaption>
-                                    <div class="span">
+                                    <div class="name_accommodation">
                                         Hôtel le soleil du matin
-                                    </div>
-                                    <div class="span2">
-                                        Nuit à partir de 128€
-                                    </div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                        <p class="price_accomodation">Nuit à partir de 128€</p>
+									</div>
+									<div>
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									</div>
                                 </figcaption>
 						</figure></a>
 					</div>
@@ -162,13 +219,13 @@
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire2.jpg" alt="#" />
 								<figcaption>
-                                    <div class="span">
+                                    <div class="name_accommodation">
                                         Au coeur de l'eau Chambres d'hôtes
-                                    </div>
-                                    <div class="span2">
-                                        Nuit à partir de 71€
-                                    </div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                        <p class="price_accomodation">Nuit à partir de 71€</p>
+									</div>
+									<div>
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									</div>
                                 </figcaption>
 						</figure></a>
 					</div>
@@ -177,13 +234,13 @@
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire3.jpg" alt="#" />
 								<figcaption>
-                                    <div class="span">
+                                    <div class="name_accommodation">
                                         Hôtel Tout bleu et Blanc
-                                    </div>
-                                    <div class="span2">
-                                        Nuit à partir de 68€
-                                    </div>
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                        <p class="price_accomodation">Nuit à partir de 68€</p>
+									</div>
+									<div>
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									</div>
                                 </figcaption>
 						</figure></a>
 					</div>
@@ -196,7 +253,7 @@
 						<div class="activite">
 							<a href="#"><figure>
 								<img src="Images/Activite/activite1.jpg" alt="#" />
-								<figcaption><span class="span">Vieux Port</span></figcaption>
+								<figcaption><span class="name_accommodation">Vieux Port</span></figcaption>
 							</figure></a>
 						</div>
 
@@ -204,14 +261,14 @@
 							<div class="activite">
 								<a href="#"><figure>
 									<img src="Images/Activite/activite2.jpg" alt="#" />
-									<figcaption><span class="span">Fort de Pornègues</span></figcaption>
+									<figcaption><span class="name_accommodation">Fort de Pornègues</span></figcaption>
 								</figure></a>
 							</div>
 
 							<div class="activite">
 								<a href="#"><figure>
 									<img src="Images/Activite/activite3.jpg" alt="#" />
-									<figcaption><span class="span">Iles de Frioul</span></figcaption>
+									<figcaption><span class="name_accommodation">Iles de Frioul</span></figcaption>
 								</figure></a>
 							</div>
 						</div>
@@ -219,7 +276,7 @@
 						<div class="activite">
 							<a href="#"><figure>
 								<img src="Images/Activite/activite4.jpg" alt="#" />
-								<figcaption><span class="span">Parc National des Calanques</span></figcaption>
+								<figcaption><span class="name_accommodation">Parc National des Calanques</span></figcaption>
 							</figure></a>
 						</div>
 
@@ -227,14 +284,14 @@
 							<div class="activite">
 								<a href="#"><figure>
 									<img src="Images/Activite/activite5.jpg" alt="#" />
-									<figcaption><span class="span">Notre-Dame-de-la-Garde</span></figcaption>
+									<figcaption><span class="name_accommodation">Notre-Dame-de-la-Garde</span></figcaption>
 								</figure></a>
 							</div>
 
 							<div class="activite">
 								<a href="#"><figure>
 									<img src="Images/Activite/activite6.jpg" alt="#" />
-									<figcaption><span class="span">Parc Longchamp</span></figcaption>
+									<figcaption><span class="name_accommodation">Parc Longchamp</span></figcaption>
 								</figure></a>
 							</div>
 						</div>
