Changer la nav et mis boutton s'inscrire/ Manque CSS Grid

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 
 				<div id="naviguation">
 					<nav>
-						<ul>
-							<li><a href="#section2">Hébergements</a></li>
-							<li><a href="#section3">Activités</a></li>
-							<li><a href="#">S'inscrire</a></li>
-						</ul>
+						<a href="#section2">Hébergements</a>
+						<a href="#section3">Activités</a>
 					</nav>
+
+					<div>
+						<form>
+							<button class="button"><a href="#" id="button_color">S'inscrire</a></button>
+						</form>
+					</div>
 				</div>
 			</header>
 
@@ -90,7 +93,6 @@
 				</section>
 
 
-
 				<section id="section2">
 					<h2>Hébergements à Marseille</h2>
 
@@ -110,7 +112,6 @@
 							</figure></a>
 						</div>
 
-
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="Images/Hebergement/photo2hebergement.jpg" alt="#" />
@@ -125,7 +126,6 @@
 								</figcaption>
 							</figure></a>
 						</div>
-
 
 						<div class="photo">
 							<a href="#"><figure>
@@ -143,7 +143,6 @@
 						</div>
 					</div>
 
-
 					<div id="hebergement2">
 						<div class="photo">
 							<a href="#"><figure>
@@ -159,7 +158,6 @@
 								</figcaption>
 							</figure></a>
 						</div>
-
 						
 						<div class="photo">
 							<a href="#"><figure>
@@ -175,7 +173,6 @@
 								</figcaption>
 							</figure></a>
 						</div>
-
 
 						<div class="photo">
 							<a href="#"><figure>
@@ -194,8 +191,6 @@
 					</div>
 					<p>Afficher plus</p>
 				</section>
-
-
 
 				<aside id="aside_conteneur">
 					<h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
