Mise en place structure CSS Grid

--- a/index.html
+++ b/index.html
@@ -294,6 +294,28 @@
 				</section>
 			</main>
 
+
+			<div class="bloc_grid">
+				<div class="items1">1</div>
+				<div class="items">2</div>
+				<div class="items3">3</div>
+				<div class="items">4</div>
+				<div class="items">5</div>
+				<div class="items">6</div>
+			</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 			<footer>
 				<div id="footer"> 						
 					<div id="a_propos">
