Mise en place des image ds grid et taille

--- a/index.html
+++ b/index.html
@@ -295,14 +295,68 @@
 			</main>
 
 
+
+
+
+
+
+
+
 			<div class="bloc_grid">
-				<div class="items1">1</div>
-				<div class="items">2</div>
-				<div class="items3">3</div>
-				<div class="items">4</div>
-				<div class="items">5</div>
-				<div class="items">6</div>
+				<div class="items1">
+					<a href="#"><img src="Images/Activite/activite1.jpg" alt="#" />
+						<p>Vieux Port</p>
+					</a>
+				</div>
+
+
+
+
+				<div class="items2">
+					<a href="#"><img src="Images/Activite/activite2.jpg" alt="#" />
+						<p>Fort de Pornègues</p>
+					</a>
+				</div>
+
+
+
+
+				<div class="items3">
+					<a href="#"><img src="Images/Activite/activite4.jpg" alt="#" />
+						<p>Parc National des Calanques</p>
+					</a>
+				</div>
+				
+
+
+
+
+				<div class="items4">
+					<a href="#"><img src="Images/Activite/activite5.jpg" alt="#" />
+						<p>Notre-Dame-de-la-Garde</p>
+					</a>
+				</div>
+
+
+
+
+				<div class="items5">
+					<a href="#"><img src="Images/Activite/activite3.jpg" alt="#" />
+						<p>Iles de Frioul</p>
+					</a>
+				</div>
+
+
+
+
+				<div class="items6">
+					<a href="#"><img src="Images/Activite/activite6.jpg" alt="#" />
+						<p>Parc Longchamp</p>
+					</a>
+				</div>
 			</div>
+
+
 
 
 
