Maquete PC fini continu maquette MOBILE

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 					<div>
 						<form>
-							<button class="button"><a href="#" id="button_color">S'inscrire</a></button>
+							<a href="#"><button class="button">S'inscrire</button></a>
 						</form>
 					</div>
 				</div>
@@ -251,34 +251,29 @@
 							</a>
 						</div>
 		
-		
 						<div class="items2">
 							<a href="#"><img src="Images/Activite/activite2.jpg" alt="#" />
 								<p>Fort de Pornègues</p>
 							</a>
 						</div>
 		
-		
 						<div class="items3">
 							<a href="#"><img src="Images/Activite/activite4.jpg" alt="#" />
 								<p>Parc National des Calanques</p>
 							</a>
 						</div>
-						
 		
 						<div class="items4">
 							<a href="#"><img src="Images/Activite/activite5.jpg" alt="#" />
 								<p>Notre-Dame-de-la-Garde</p>
 							</a>
 						</div>
-		
-		
+
 						<div class="items5">
 							<a href="#"><img src="Images/Activite/activite3.jpg" alt="#" />
 								<p>Iles de Frioul</p>
 							</a>
 						</div>
-		
 		
 						<div class="items6">
 							<a href="#"><img src="Images/Activite/activite6.jpg" alt="#" />
@@ -289,7 +284,6 @@
 				</section>
 			</main>
 
-			
 
 			<footer>
 				<div id="footer"> 						
