Etoile grise et placement

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<div class="price_accomodation">
 										Nuit à partir de 25€
 									</div>
-									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 								</figcaption>
 							</figure></a>
 						</div>
@@ -128,7 +128,7 @@
 									<div class="price_accomodation">
 										Nuit à partir de 76€
 									</div>
-									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 								</figcaption>
 							</figure></a>
 						</div>
@@ -145,7 +145,7 @@
 									<div class="price_accomodation">
 										Nuit à partir de 46€
 									</div>
-									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i><i class="fas fa-star grey"></i>
 								</figcaption>
 							</figure></a>
 						</div>
@@ -160,7 +160,7 @@
 									<div class="price_accomodation">
 										Nuit à partir de 23€
 									</div>
-									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 								</figcaption>
 							</figure></a>
 						</div>
@@ -218,7 +218,7 @@
 									</div>
 
 									<div>
-										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 									</div>
                                 </figcaption>
 						</figure></a>
@@ -237,7 +237,7 @@
 									</div>
 
 									<div>
-										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 									</div>
                                 </figcaption>
 						</figure></a>
@@ -286,21 +286,21 @@
 					</div>
 				</section>
 			</main>
-
-
-			<footer>
-				<div id="footer"> 						
+		</div>
+		<footer>
+			<div id="footer">
+				<div id="pos"> 						
 					<div id="a_propos">
 						<h3>A propos</h3>
 						<a href="#">Fontionnement du site</a>
 						<a href="#">Conditions générale de ventes</a>
-                        <a href="#">Données et confidentialité</a>
+						<a href="#">Données et confidentialité</a>
 					</div>
 											
 					<div id="nos_hebergements">
 						<h3>Nos hébergements</h3>
 						<a href="#">Charte qualité</a>
-                        <a href="#">Soumettre votre hôtel</a>
+						<a href="#">Soumettre votre hôtel</a>
 					</div>
 												
 					<div id="assistance">
@@ -309,7 +309,7 @@
 						<a href="#">Nous contacter</a>
 					</div>	
 				</div>
-			</footer>
-		</div>
+			</div>
+		</footer>
 	</body>
 </html>
