--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <p>En plein centre ville ou ou en pleine nature</p>
                     
 						<form method="post" action="traitement.php" id="form">
-								<label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
-								<input type="text" name="localisation" id="localisation" />
-								<input type="submit" name="Rechercher" value="Rechercher" id="Recherche_bouton" />
+							<label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
+							<input type="text" name="localisation" id="localisation" />
+							<input type="submit" name="Rechercher" value="Rechercher" id="Recherche_bouton" />
 						</form>
 
 					<div id="filtres">
@@ -190,12 +190,14 @@
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire1.jpg" alt="#" />
                                 <figcaption>
-                                    <div class="name_accommodation">
-										Hôtel le soleil du matin
-									</div>
+									<div>
+										<div class="name_accommodation">
+											Hôtel le soleil du matin
+										</div>
 
-									<div class="price_accomodation">
-										Nuit à partir de 128€
+										<div class="price_accomodation">
+											Nuit à partir de 128€
+										</div>
 									</div>
 
 									<div>
@@ -209,12 +211,14 @@
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire2.jpg" alt="#" />
 								<figcaption>
-                                    <div class="name_accommodation">
-										Au coeur de l'eau Chambres d'hôtes
-									</div>
+									<div>
+										<div class="name_accommodation">
+											Au coeur de l'eau Chambres d'hôtes
+										</div>
 
-									<div class="price_accomodation">
-										Nuit à partir de 71€
+										<div class="price_accomodation">
+											Nuit à partir de 71€
+										</div>
 									</div>
 
 									<div>
@@ -228,12 +232,14 @@
 						<a href="#"><figure class="flex">
 								<img src="Images/Populaire/populaire3.jpg" alt="#" />
 								<figcaption>
-                                    <div class="name_accommodation">
-										Hôtel Tout bleu et Blanc
-									</div>
+									<div>
+										<div class="name_accommodation">
+											Hôtel Tout bleu et Blanc
+										</div>
 
-									<div class="price_accomodation">
-                                       Nuit à partir de 68€
+										<div class="price_accomodation">
+										Nuit à partir de 68€
+										</div>
 									</div>
 
 									<div>
