--- a/index.html
+++ b/index.html
@@ -254,41 +254,29 @@
 					<h2>Activités à Marseille</h2>
 
 					<div class="bloc_grid">
-						<div class="items1">
-							<a href="#"><img src="Images/Activite/activite1.jpg" alt="#" />
-								<p>Vieux Port</p>
-							</a>
-						</div>
+						<a class="items1" href="#"><img src="Images/Activite/activite1.jpg" alt="#" />
+							<h4 class="title_grid">Vieux Port</h4>
+						</a>
 		
-						<div class="items2">
-							<a href="#"><img src="Images/Activite/activite2.jpg" alt="#" />
-								<p>Fort de Pornègues</p>
-							</a>
-						</div>
+						<a class="items2" href="#"><img src="Images/Activite/activite2.jpg" alt="#" />
+							<h4 class="title_grid">Fort de Pornègues</h4>
+						</a>
 		
-						<div class="items3">
-							<a href="#"><img src="Images/Activite/activite4.jpg" alt="#" />
-								<p>Parc National des Calanques</p>
-							</a>
-						</div>
+						<a class="items3" href="#"><img src="Images/Activite/activite4.jpg" alt="#" />
+							<h4 class="title_grid">Parc National des Calanques</h4>
+						</a>
 		
-						<div class="items4">
-							<a href="#"><img src="Images/Activite/activite5.jpg" alt="#" />
-								<p>Notre-Dame-de-la-Garde</p>
-							</a>
-						</div>
+						<a class="items4" href="#"><img src="Images/Activite/activite5.jpg" alt="#" />
+							<h4 class="title_grid">Notre-Dame-de-la-Garde</h4>
+						</a>
 
-						<div class="items5">
-							<a href="#"><img src="Images/Activite/activite3.jpg" alt="#" />
-								<p>Iles de Frioul</p>
-							</a>
-						</div>
-		
-						<div class="items6">
-							<a href="#"><img src="Images/Activite/activite6.jpg" alt="#" />
-								<p>Parc Longchamp</p>
-							</a>
-						</div>
+						<a class="items5" href="#"><img src="Images/Activite/activite3.jpg" alt="#" />
+							<h4 class="title_grid">Iles de Frioul</h4>
+						</a>
+
+						<a class="items6" href="#"><img src="Images/Activite/activite6.jpg" alt="#" />
+							<h4 class="title_grid">Parc Longchamp</h4>
+						</a>
 					</div>
 				</section>
 			</main>
