Ajout fichier mediumimage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 			<main>
 				<section id="section1">
-					<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
+					<h1><strong>Trouvez votre hébergement pour des vacanses de rêve</strong></h1>
                     <p>En plein centre ville ou ou en pleine nature</p>
                     
 						<form method="post" action="traitement.php" id="form">
@@ -85,7 +85,7 @@
 
 
 				<section id="section2">
-					<h2>Hébergements à Marseille</h2>
+					<h2><strong>Hébergements à Marseille</strong></h2>
 
 					<div id="hebergement1">
 						<div class="photo">
@@ -184,7 +184,7 @@
 				</section>
 
 				<aside id="aside_conteneur">
-					<h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
+					<h2><strong>Les plus populaires</strong><i class="fas fa-chart-line"></i></h2>
 
 					<div class="aside">
 						<a href="#"><figure class="flex">
