Responsiv Mob trop de choses a finir

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<form method="post" action="traitement.php" id="form">
 							<label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
 							<input type="text" name="localisation" id="localisation" />
-							<input type="submit" name="Rechercher" value="Rechercher" id="Recherche_bouton" />
+							<input type="submit" name="Rechercher" value="Rechercher" id="recherche_bouton" />
 						</form>
 
 					<div id="filtres">
