Avancement responsiv header

--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
 
 	<body>
 		<div id="page_complete">
-            
             <header>
-				<img src="Images/Logo/Reservia.png" alt="Logo_Reservia">
-
-				<div id="naviguation">
-					<nav>
-						<a href="#section2">Hébergements</a>
-						<a href="#section3">Activités</a>
-					</nav>
-					<button class="button">S'inscrire</button>
+				<div id="logo">
+					<img src="Images/Logo/Reservia.png" alt="Logo_Reservia">
+				</div>
+				
+				<div id="place">
+					<div id="naviguation">
+						<nav>
+							<a href="#section2">Hébergements</a>
+							<a href="#section3">Activités</a>
+						</nav>
+					</div>
+					<div id="button">
+						<button class="button">S'inscrire</button>
+					</div>
 				</div>
 			</header>
 
