--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <header>
 				<div id="head">
-                	<div id="width">
+                	<div id="logo">
                     	<img src="C:/Users/User/OneDrive/Bureau/test/Reservia.png" alt="Logo_Reservia">
                 	</div>
                     
