--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header>
 				<div id="head">
                 	<div id="logo">
-                    	<img src="C:/Users/User/OneDrive/Bureau/test/Reservia.png" alt="Logo_Reservia">
+                    	<img src="Images//Logo/Reservia.png" alt="Logo_Reservia">
                 	</div>
                     
                     <div id="place">
