Realisation transition bouton/icone search formulaire

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#section3">Activités</a>
                         </nav>
 
-                        <button class="button">S'inscrire</button>
+						<button class="button">S'inscrire</button>
 					</div> 
 				</div>
             </header>
@@ -41,8 +41,11 @@
 							<label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
 							<input class="search" type="text" name="localisation" value="Marseille,France" id="localisation" />
 							<input type="submit" name="Rechercher" value="Rechercher" id="recherche_bouton" />
+							<span class="search-button">
+								<i class="fas fa-search"></i>
+							</span>
 						</form>
-
+						
 					<div id="filtres">
 						<p>Filtres</p>
 						<div id="regroupe">
