--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css"/>
-		<link rel="stylesheet" media="all and (max-width: 750px)" href="stylemobile.css" />
+		<link rel="stylesheet" media="all and (max-width: 500px)" href="stylemobile.css" />
+		<link rel="stylesheet" media="all and (max-width: 770px)" href="styletablette.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
