test mise en place responsiv tablette

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css"/>
 		<link rel="stylesheet" media="all and (max-width: 500px)" href="stylemobile.css" />
-		<link rel="stylesheet" media="all and (max-width: 770px)" href="styletablette.css" />
+		<link rel="stylesheet" media="all and (max-width: 770px) and (min-width: 510px)" href="styletablette.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
