--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css"/>
-		<link rel="stylesheet" media="all and (max-width: 770px)" href="stylemobile.css" />
-		<link rel="stylesheet" media="all and (max-width: 1300px) and (min-width: 770px)" href="styletablette.css" />
+		<link rel="stylesheet" media="all and (max-width: 768px)" href="stylemobile.css" />
+		<link rel="stylesheet" media="all and (max-width: 1200px)" href="styletablette.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
@@ -16,20 +17,16 @@
 		<div id="page_complete">
 
             <header>
-				<div id="head">
-                	<div id="logo">
-                    	<img src="Images//Logo/Reservia.png" alt="Logo_Reservia">
-                	</div>
-                    
-                    <div id="place">
-                        <nav>
-                            <a href="#section2">Hébergements</a>
-                            <a href="#section3">Activités</a>
-                        </nav>
-
-						<button class="button">S'inscrire</button>
-					</div> 
+				<div id="logo">
+					<img src="Images//Logo/Reservia.png" alt="Logo_Reservia">
 				</div>
+			
+				<nav>
+					<a href="#section2" class="active">Hébergements</a>
+					<a href="#section3">Activités</a>
+				</nav>
+
+				<button class="button">S'inscrire</button>
             </header>
             
 
