Responsiv Mobile Manque que Grid

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			
 				<nav>
 					<a href="#section2" class="active">Hébergements</a>
-					<a href="#section3">Activités</a>
+					<a href="#section3" class="active2">Activités</a>
 				</nav>
 
 				<button class="button">S'inscrire</button>
