--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     
 						<form method="post" action="traitement.php" id="form">
 							<label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
-							<input class="search" type="text" name="localisation" value="Marseille,France" id="localisation" />
+							<input class="search" type="text" name="localisation" value="Marseille, France" id="localisation" />
 							<input type="submit" name="Rechercher" value="Rechercher" id="recherche_bouton" />
 							<span class="search-button">
 								<i class="fas fa-search"></i>
@@ -106,7 +106,7 @@
 											Auberge la Cannebière
 										</div>
 										<div class="price_accomodation">
-											Nuit à partir de 25€
+											Nuit à partir de <span class="bold">25€</span>
 										</div>
 										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 									</figcaption>
@@ -121,7 +121,7 @@
 											Hôtel du port
 										</div>
 										<div class="price_accomodation">
-											Nuit à partir de 52€
+											Nuit à partir de 52<span class="bold">€</span>
 										</div>
 										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 									</figcaption>
@@ -136,7 +136,7 @@
 											Hôtel Les mouettes
 										</div>
 										<div class="price_accomodation">
-											Nuit à partir de 76€
+											Nuit à partir de 76<span class="bold">€</span>
 										</div>
 										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 									</figcaption>
@@ -153,7 +153,7 @@
 											Hôtel de la mer
 										</div>
 										<div class="price_accomodation">
-											Nuit à partir de 46€
+											Nuit à partir de 46<span class="bold">€</span>
 										</div>
 										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i><i class="fas fa-star grey"></i>
 									</figcaption>
@@ -168,7 +168,7 @@
 											Auberge le panier
 										</div>
 										<div class="price_accomodation">
-											Nuit à partir de 23€
+											Nuit à partir de <span class="bold">23€</span>
 										</div>
 										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star grey"></i>
 									</figcaption>
@@ -183,7 +183,7 @@
 											Hôtel chez Amina
 										</div>
 										<div class="price_accomodation">
-											Nuit à partir de 96€
+											Nuit à partir de 96<span class="bold">€</span>
 										</div>
 										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 									</figcaption>
@@ -206,7 +206,7 @@
 											</div>
 
 											<div class="price_accomodation">
-												Nuit à partir de 128€
+												Nuit à partir de 128<span class="bold">€</span>
 											</div>
 										</div>
 
@@ -227,7 +227,7 @@
 											</div>
 
 											<div class="price_accomodation">
-												Nuit à partir de 71€
+												Nuit à partir de 71<span class="bold">€</span>
 											</div>
 										</div>
 
@@ -248,7 +248,7 @@
 											</div>
 
 											<div class="price_accomodation">
-											Nuit à partir de 68€
+											Nuit à partir de 68<span class="bold">€</span>
 											</div>
 										</div>
 
