--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css"/>
 		<link rel="stylesheet" media="all and (max-width: 1260px)" href="styletablette.css" />
-		<link rel="stylesheet" media="all and (max-width: 760x)" href="stylemobile.css" />
+		<link rel="stylesheet" media="all and (max-width: 768px)" href="stylemobile.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
