Tablette Manque que header

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 						<div id="hebergement1">
 							<div class="photo">
-								<a href="#"><figure>
+								<a href="#"><figure class="grow">
 									<img src="Images/Hebergement/photo1hebergement.jpg" alt="#" />
 									<figcaption>
 										<div class="name_accommodation">
@@ -114,7 +114,7 @@
 							</div>
 
 							<div class="photo">
-								<a href="#"><figure>
+								<a href="#"><figure class="grow">
 									<img src="Images/Hebergement/photo2hebergement.jpg" alt="#" />
 									<figcaption>
 										<div class="name_accommodation">
@@ -129,7 +129,7 @@
 							</div>
 
 							<div class="photo">
-								<a href="#"><figure>
+								<a href="#"><figure class="grow">
 									<img src="Images/Hebergement/photo3hebergement.jpg" alt="#" />
 									<figcaption>
 										<div class="name_accommodation">
@@ -146,7 +146,7 @@
 
 						<div id="hebergement2">
 							<div class="photo">
-								<a href="#"><figure>
+								<a href="#"><figure class="grow">
 									<img src="Images/Hebergement/photo4hebergement.jpg" alt="#" />
 									<figcaption>
 										<div class="name_accommodation">
@@ -161,7 +161,7 @@
 							</div>
 							
 							<div class="photo">
-								<a href="#"><figure>
+								<a href="#"><figure class="grow">
 									<img src="Images/Hebergement/photo5hebergement.jpg" alt="#" />
 									<figcaption>
 										<div class="name_accommodation">
@@ -176,7 +176,7 @@
 							</div>
 
 							<div class="photo">
-								<a href="#"><figure>
+								<a href="#"><figure class="grow">
 									<img src="Images/Hebergement/photo6hebergement.jpg" alt="#" />
 									<figcaption>
 										<div class="name_accommodation">
@@ -197,7 +197,7 @@
 						<h2><strong>Les plus populaires</strong><i class="fas fa-chart-line"></i></h2>
 
 						<div class="aside">
-							<a href="#"><figure class="flex">
+							<a href="#"><figure class="flex grow">
 									<img src="Images/Populaire/populaire1.jpg" alt="#" />
 									<figcaption>
 										<div>
@@ -218,7 +218,7 @@
 						</div>
 
 						<div class="aside">
-							<a href="#"><figure class="flex">
+							<a href="#"><figure class="flex grow">
 									<img src="Images/Populaire/populaire2.jpg" alt="#" />
 									<figcaption>
 										<div>
@@ -239,7 +239,7 @@
 						</div>
 
 						<div class="aside">
-							<a href="#"><figure class="flex">
+							<a href="#"><figure class="flex grow">
 									<img src="Images/Populaire/populaire3.jpg" alt="#" />
 									<figcaption>
 										<div>
