--- a/index.html
+++ b/index.html
@@ -266,27 +266,33 @@
 					<h2>Activités à Marseille</h2>
 
 					<div class="bloc_grid">
-						<a class="items1" href="#"><img src="Images/Activite/activite1.jpg" alt="#" />
+						<a class="items1" href="#">
+							<img src="Images/Activite/activite1.jpg" alt="#" />
 							<h4 class="title_grid">Vieux Port</h4>
 						</a>
 		
-						<a class="items2" href="#"><img src="Images/Activite/activite2.jpg" alt="#" />
+						<a class="items2" href="#">
+							<img src="Images/Activite/activite2.jpg" alt="#" />
 							<h4 class="title_grid">Fort de Pornègues</h4>
 						</a>
 		
-						<a class="items3" href="#"><img src="Images/Activite/activite4.jpg" alt="#" />
+						<a class="items3" href="#">
+							<img src="Images/Activite/activite4.jpg" alt="#" />
 							<h4 class="title_grid">Parc National des Calanques</h4>
 						</a>
 		
-						<a class="items4" href="#"><img src="Images/Activite/activite5.jpg" alt="#" />
+						<a class="items4" href="#">
+							<img src="Images/Activite/activite5.jpg" alt="#" />
 							<h4 class="title_grid">Notre-Dame-de-la-Garde</h4>
 						</a>
 
-						<a class="items5" href="#"><img src="Images/Activite/activite3.jpg" alt="#" />
+						<a class="items5" href="#">
+							<img src="Images/Activite/activite3.jpg" alt="#" />
 							<h4 class="title_grid">Iles de Frioul</h4>
 						</a>
 
-						<a class="items6" href="#"><img src="Images/Activite/activite6.jpg" alt="#" />
+						<a class="items6" href="#">
+							<img src="Images/Activite/activite6.jpg" alt="#" />
 							<h4 class="title_grid">Parc Longchamp</h4>
 						</a>
 					</div>
