--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 	<body>
 		<div id="page_complete">
-
+			
+			<!-- HEADER -->
             <header>
 				<div class="logo">
 					<img src="Images//Logo/Reservia.png" alt="Logo_Reservia">
@@ -29,7 +30,7 @@
 				<button class="button">S'inscrire</button>
             </header>
             
-
+			<!-- MAIN -->
 			<main>
 				<section class="section1">
 					<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
@@ -299,6 +300,8 @@
 				</section>
 			</main>
 		</div>
+
+		<!-- FOOTER -->
 		<footer>
 			<div class="footer">
 				<div class="pos"> 						
